@@ -16,6 +16,7 @@ frr (@VERSION@) RELEASED; urgency=medium
   * New Enabled: PIM Sparse Mode
   * New Enabled: NHRP RFC 2332
   * New Enabled: Label Manager
+  * Switched from hardening-wrapper to dpkg-buildflags. 
 
  -- FRRouting-Dev <dev@lists.frrouting.org>  Wed, 05 Apr 2017 22:23:42 -0500
 
